--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body{
-    background-color: #e1e1e1;
+    background: rgb(1, 1, 10);
     font-family: 'Muli', sans-serif;
     margin: 0;
     display: flex;
@@ -17,7 +17,7 @@ body{
 }
 
 .container  {
-    background-color: #fff;
+    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(255,0,0,1) 86%);
     border-radius: 10px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.1), 0 6px 6px rgba(0,0,0,0.1);
     padding: 50px 20px;
@@ -28,11 +28,11 @@ body{
 
 
 .btn {
-    background-color: rebeccapurple;
+    background-color: rgb(243, 17, 17);
     border-radius: 5px;
     border: none;
     color: #fff;
-    margin: 1rem;
+    margin: 1rem ;
     padding: 1.5rem 3rem;
     font-size: 1.2rem;
     font-family: inherit;
@@ -49,7 +49,7 @@ body{
 
 .profilePic {
     border: 1px solid #ddd;
-    border-radius: 4px;
+    border-radius: 80px;
     padding: 5px;
     width: 150px;
   }
