--- a/style.css
+++ b/style.css
@@ -29,19 +29,25 @@ body{
     position: absolute;
 }
 
+a {
+    width:180px;
+    height:60px;
+    flex-direction: row;
+}
+
 .btnContainer {
     position: relative;
     display: flex;
     flex-direction: column;
-   
+    align-items: center;
 }
 
 .btn {
     background-color: rgb(243, 17, 17);
     border-radius: 5px;
-    border: none;
+    border: 2px solid black;
     color: #fff;
-    margin: 1rem ;
+    /* margin: 1rem ; */
     font-size: 1.2rem;
     font-family: inherit;
     cursor: pointer;
@@ -56,7 +62,7 @@ body{
 
 .btn:hover {
    opacity: 0.5; 
-   color:rgba(34,193,195,1) ;
+   background-color:rgb(0, 0, 0) ;
 }
 
 .btn:focus {
